plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'service.structure'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // GitLab4J
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0'

    // JavaParser — парсинг Java-исходников (поддерживает синтаксис Java 21)
    implementation 'com.github.javaparser:javaparser-core:3.26.3'

    // Caffeine — TTL-кэш для индекса файлов GitLab
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    // Jackson (уже в spring-boot-starter-web, явно для ясности)
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Swagger UI / OpenAPI 3
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // Тесты
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
}

tasks.named('test') {
    useJUnitPlatform()
}
